--- a/style.css
+++ b/style.css
@@ -1,73 +1,78 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.header{
+.header {
+  height: 100vh;
+}
+
+.header-container {
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+}
+
+.logo-nav {
+  text-decoration: none;
+  color: #fff;
+}
+
+.main-nav {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  gap: 10px;
+}
+
+.main-nav-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+  list-style-type: none;
+}
+
+.main-nav-link {
+  text-decoration: none;
+  color: #fff;
+}
+
+.icon-mobile-nav {
+  width: 43px;
+  height: 43px;
+  color: #fff;
+}
+
+.btn-mobile-nav {
+  display: none;
+}
+
+.icon-mobile-nav[name="close"] {
+  display: none;
+}
+
+@media (max-width: 375px) {
+  .header-img {
+    position: relative;
+  }
+
+  .btn-mobile-nav {
+    display: block;
+  }
+  .main-nav-list {
+    background-color: rgba(0, 0, 255, 0.279);
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100vh;
-    background-color: brown;
-    font-size: 20px;    
+    flex-direction: column;
+    gap: 0;
+  }
 }
-
-.container-header{
-    background: #000;
-    display: flex;
-    justify-content: space-between;
-    height: 80px;
-    padding: 10px;
-    align-items: center;
-    
-}
-
-.logo-nav{
-    color: white;
-    text-decoration: none;
-    margin-left: 20px;
-    font-size: 24px;
-}
-
-.main-nav-list{
-    display: flex;
-    justify-content: space-around;
-    list-style-type: none;
-    gap: 20px; 
-    margin-right: 20px;  
-}
-
-ul a{
-    text-decoration: none;
-    color: white;    
-    font-size: 24px;
-}
-
-.main-nav{
-    display: flex;
-    align-items: center;
-}
-
-.btn-mobile-nav{
-    border: none;
-    background: none;
-    display: none;
-}
-
-.icon-mobile-nav{
-    height: 48px;
-    width: 48px;
-    color: white;
-}
-
-.icon-mobile-nav[name="close"]{
-    display: block;
-}
-
-
-
-
-
-
-
-
-
