--- a/style.css
+++ b/style.css
@@ -4,75 +4,96 @@
   box-sizing: border-box;
 }
 
-.header {
-  height: 100vh;
+.logo {
+  width: 15%;
 }
 
-.header-container {
+img {
   width: 100%;
-  background-color: rgb(0, 0, 0);
-  font-size: 20px;
+}
+
+.header {
   display: flex;
-  justify-content: space-between;
-  padding: 10px;
+  justify-content: space-around;
   align-items: center;
-}
-
-.logo-nav {
-  text-decoration: none;
-  color: #fff;
-}
-
-.main-nav {
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-  gap: 10px;
+  min-height: 60px;
+  background-color: cadetblue;
+  border-bottom: 2px solid rgb(0, 89, 92);
 }
 
 .main-nav-list {
   display: flex;
-  justify-content: space-between;
-  gap: 10px;
-  align-items: center;
+  gap: 20px;
   list-style-type: none;
 }
 
 .main-nav-link {
   text-decoration: none;
-  color: #fff;
-}
-
-.icon-mobile-nav {
-  width: 43px;
-  height: 43px;
-  color: #fff;
+  color: rgb(41, 41, 41);
+  font-size: 1.4rem;
 }
 
 .btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
   display: none;
 }
 
-.icon-mobile-nav[name="close"] {
+.icon-mobile-nav {
+  height: 48px;
+  width: 48px;
+  color: #fff;
+}
+
+.icon-mobile-nav[name="close-outline"] {
   display: none;
 }
 
 @media (max-width: 375px) {
-  .header-img {
-    position: relative;
+  .logo {
+    width: 30%;
+    margin-left: 5px;
   }
-
   .btn-mobile-nav {
     display: block;
   }
-  .main-nav-list {
-    background-color: rgba(0, 0, 255, 0.279);
+
+  .header {
+    position: relative;
+  }
+
+  .main-nav {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: all 0.9s ease;
+    pointer-events: none;
+    visibility: hidden;
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+  }
+
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+
+  .main-nav-list {
     flex-direction: column;
-    gap: 0;
   }
 }
