--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .logo {
   width: 15%;
 }
@@ -51,6 +55,12 @@ img {
 }
 
 @media (max-width: 375px) {
+  html {
+    overflow-x: hidden;
+  }
+  body {
+    overflow-x: hidden;
+  }
   .logo {
     width: 30%;
     margin-left: 5px;
@@ -69,7 +79,7 @@ img {
     left: 0;
     width: 100%;
     height: 100vh;
-
+    background-color: rgba(249, 247, 244, 0.896);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,16 +87,19 @@ img {
     transition: all 0.9s ease;
     pointer-events: none;
     visibility: hidden;
+    transform: translateX(100%);
   }
 
   .nav-open .main-nav {
     opacity: 1;
     pointer-events: auto;
     visibility: visible;
+    transform: translateX(0);
   }
 
   .nav-open .icon-mobile-nav[name="close-outline"] {
     display: block;
+    color: black;
   }
 
   .nav-open .icon-mobile-nav[name="menu-outline"] {
